# madhouse

./: .gitignore  README.md  pyproject.toml  requirements.txt
lesson1/Scripts/: activate  activate.bat
shop/: db.sqlite3
shop/custom_auth/: forms.py  urls.py  views.py
shop/custom_auth/templates/: login.html  register.html
shop/forms/: admin.py  forms.py  models.py  urls.py  views.py
shop/forms/migrations/: 0001_initial.py
shop/forms/templates/: form.html  persons.html
shop/market/: admin.py  forms.py  models.py  urls.py  views.py
shop/market/migrations/: 0001_initial.py  0002_rename_release_data_album_release_date_and_more.py  0003_stuff.py  0004_shoppingcart_cart.py  0005_stuff_is_available.py  0006_person_age.py
shop/market/static/css/: 404.css  about.css  index.css
shop/market/templates/: 400.html  forms.html  homework3.html  index.html  loggedin.html  login.html  products.html  register.html  several_forms.html
shop/market/templatetags/: my_filters.py
shop/models_and_migrations/: admin.py  models.py
shop/models_and_migrations/migrations/: 0001_initial.py  0002_goiteeens_alter_child_age.py
shop/shop/: settings.py  urls.py
shop/templates/: base.html
shop/templates/registration/: password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html
